--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,7 @@
+<h1>Enter an item to purchase!</h1>
 
+<form method="post" action="/checkout">
+  <label for="item">Item Name:</label>
+  <input type="text" id="item" name="item"><br><br>
+  <input type="submit" value="submit" id="submit"></input>
+</form>
