--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,4 @@
-
+<form method="POST" action="/checkout">
+  <p>Item: <input type="text" name="item">
+    <input type="submit" id="submit" value="Submit"></p>
+</form>
