--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,5 @@
 
+<form action="/checkout" method="POST">
+  Place Item in Cart:<input type="text" name="item">
+  <button type="submit" value="submit">Submit</button>
+</form>
