--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,5 @@
 
+<form method="POST" action="/checkout">
+<p>What item would you like to purchase?<input type="text" name="item"></p>
+<input type="submit" value="submit">
+</form>
