--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,5 @@
-
+<h1>Enter your shopping cart info here:</h1>
+<form method="POST" action="/checkout">
+  <label>Item: <input type="text" name="item"/></label>
+  <input type="submit" value="submit" id="submit">
+</form>
